k3s/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: plex-ingress
  namespace: plex-media
spec:
  rules:
  - host: plex.tino.sh
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: plex-media-service
            port: 
              number: 8080
  tls:
  - hosts:
    - plex.tino.sh
    secretName: plex-tino-sh-tls
